# cotrial-ragv2

./: .gitignore  .ruff.toml  .samignore  Makefile  QUICK_START.md  README.md  SETUP.md  pyproject.toml  requirements-frontend.txt  requirements.txt  run_api_only.sh  run_app.sh  setup_local_env.sh
.github/: PULL_REQUEST_TEMPLATE.md
docs/: AGENTIC_ROUTING_ARCHITECTURE.md  LLM_SQL_GENERATION_GUIDE.md  SQL_SCHEMA.md
scripts/: batch_clean_prompt_engineering.py  build_pdf_index_vector_db.py  diagnose_vector_db.py  migrate_sas_to_mysql_optimized.py  process_qa_for_prompt_engineering.py  test_local_setup.py
src/: __init__.py
src/api/: __init__.py  models.py  server.py
src/data_schemas/: __init__.py  manifest.py
src/frontend/: __init__.py  app.py  login.py  trials.py
src/frontend/pages/: Chat.py  login.py  trials.py
src/indexers/: __init__.py  common.py
src/retrieval/: __init__.py  base.py  hybrid.py  vector_db_retriever.py
src/utils/: __init__.py  agentic_router.py  answer_generator.py  config.py  embeddings.py  logging.py  mysql_client.py  prompt_examples.py  sql_generator.py  vector_db.py
tests/: __init__.py  conftest.py  test_retrieval_stub.py  test_status.py
tests/data/: mini_manifest.json
